--- a/recipes/tuna_ceviche.html
+++ b/recipes/tuna_ceviche.html
@@ -5,12 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Odin Recipes</title>
+  <title>Tuna Ceviche</title>
 </head>
 
 <body>
-  <h1>Odin Recipes</h1>
-  <a href="recipes/tuna_ceviche.html">Tuna Ceviche</a>
+  <h1>Tuna Ceviche</h1>
 </body>
 
 </html>
