--- a/recipes/tuna_ceviche.html
+++ b/recipes/tuna_ceviche.html
@@ -10,6 +10,32 @@
 
 <body>
   <h1>Tuna Ceviche</h1>
+  <img
+    src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9138961.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+    alt="A cup of tuna ceviche">
+  <h2>Description</h2>
+  <p>Fresh chunks of tuna, ripe mango, and creamy avocado combine to make the perfect appetizer or a tasty lunch. I love
+    to eat this with lime-seasoned tortilla chips, but it's just as delicious served in lettuce cups. I try to keep the
+    tuna, avocado and mango pieces between 1/4- and 1/2-inch in size. Best eaten same-day, but can be kept 1-2 days in
+    fridge, keeping in mind that texture will change.</p>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>1 pound sushi-grade tuna, diced</li>
+    <li>½ cup diced avocado</li>
+    <li>½ cup diced mango</li>
+    <li>¼ cup minced red onion</li>
+    <li>¼ cup minced cilantro</li>
+    <li>1 tablespoon minced jalapeno pepper</li>
+    <li>⅓ cup fresh lime juice</li>
+    <li>1 tablespoon vegetable oil</li>
+    <li>salt and freshly ground black pepper to taste</li>
+  </ul>
+  <h2>Directions</h2>
+  <ol>
+    <li>Combine tuna, avocado, mango, red onion, cilantro, and jalapeno in a bowl. Drizzle with lime juice and oil and
+      season with salt and pepper. Gently toss to coat evenly. Refrigerate for 1 hour, gently tossing halfway through.
+    </li>
+  </ol>
 </body>
 
 </html>
