--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/tuna_ceviche.html">Tuna Ceviche</a>
+  <ul>
+    <a href="recipes/tuna_ceviche.html">Tuna Ceviche</a>
+    <a href="recipes/tonkatsu_shoyu_ramen.html">Tonkatsu Shoyu Ramen</a>
+    <a href="recipes/slow_cooker_texas_pulled_pork.html">Slow Cooker Texas Pulled Pork</a>
+  </ul>
 </body>
 
 </html>
