View recipes as unordered list

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <h1>Odin Recipes</h1>
   <ul>
-    <a href="recipes/tuna_ceviche.html">Tuna Ceviche</a>
-    <a href="recipes/tonkatsu_shoyu_ramen.html">Tonkatsu Shoyu Ramen</a>
-    <a href="recipes/slow_cooker_texas_pulled_pork.html">Slow Cooker Texas Pulled Pork</a>
+    <li><a href="recipes/tuna_ceviche.html">Tuna Ceviche</a></li>
+    <li><a href="recipes/tonkatsu_shoyu_ramen.html">Tonkatsu Shoyu Ramen</a></li>
+    <li><a href="recipes/slow_cooker_texas_pulled_pork.html">Slow Cooker Texas Pulled Pork</a></li>
   </ul>
 </body>
 
